--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-14  Andras Varga
+
+	* nedc: no limit on ned file line length
+
 2003-01-30  Andras Varga
 
 	* added handling of new MathFunc4Args
@@ -8,7 +12,7 @@
 
 2003-01-04  Andras Varga
 
-	* opp_msgc: added support for cplusplus { ... }; syntax
+	* opp_msgc: added support for cplusplus {{ ... }} syntax
 
 	* opp_msgc: 'cobject <classname>' syntax changed to 'class <classname>',
 	'noncobject <classname>' changed to 'class noncobject <classname>'.
