--- a/doc/usman/ch-ned-lang.tex
+++ b/doc/usman/ch-ned-lang.tex
@@ -1643,7 +1643,7 @@ on the parameter will always return the same value.
 
 Random variate functions use one of the random number generators (RNGs)
 provided by \opp. By default this is generator 0, but you can specify
-which one.
+which one to be used.
 
 {\opp} has the following predefined distributions\index{distribution!predefined}:
 
@@ -1671,10 +1671,14 @@ which one.
 \fname{binomial(n, p, \textit{rng=0})} & binomial distribution with parameters n>=0 and 0<=p<=1 \\\hline
 \fname{geometric(p, \textit{rng=0})} & geometric distribution with parameter 0<=p<=1 \\\hline
 \fname{negbinomial(n, p, \textit{rng=0})} & binomial distribution with parameters n>0 and 0<=p<=1\\\hline
-\fname{hypergeometric(a, b, n, \textit{rng=0})} & hypergeometric distribution with parameters a>0,b>0 and 0<=n<=a+b.\\\hline
 \fname{poisson(lambda, \textit{rng=0})} & Poisson distribution with parameter lambda \\\hline
 
 \end{longtable}
+
+%
+% FIXME insert this into the table then hypergeom() starts to work:
+% fname{hypergeometric(a, b, n, \textit{rng=0})} & hypergeometric distribution with parameters a>0,b>0 and 0<=n<=a+b.\\\hline
+%
 
 If you do not specify the optional \fpar{rng} argument, the functions will
 use random number generator 0.
