--omnetpp-2.3b1 released-- line added to ChangeLog by _scripts/tag

--- a/doc/src/manual/ChangeLog
+++ b/doc/src/manual/ChangeLog
@@ -1,3 +1,5 @@
+2003-02-15  ------ omnetpp-2.3b1 released ------
+
 2003-02-11  Andras Varga
 
 	* checked in the changes for 2.3b1, the most significant being
