--- a/tutorial/queues/ChangeLog
+++ b/tutorial/queues/ChangeLog
@@ -1,3 +1,5 @@
+2003-02-15  ------ omnetpp-2.3b1 released ------
+
 2002-12-22  Andras Varga
 
 	* ring.ned: display string corrected do that modules are really
