--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,5 @@
+2003-02-15  ------ omnetpp-2.3b1 released ------
+
 2003-02-15  Andras Varga
 
 	* cstat.h, chist.h: observation count and histogram cell value made
