--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,5 @@
+2003-02-15  ------ omnetpp-2.3b1 released ------
+
 2003-02-14  Andras Varga
 
 	* inifile.cc: improved handling of lines ~ 1024 chars
