--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2003-02-15  ------ omnetpp-2.3b1 released ------
+
 2002-11-30  Andras Varga
 
 	* development of NEDXML is under way. Until the code reaches a stable
