--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,5 @@
+2003-03-15  ------ omnetpp-2.3b2 released ------
+
 2003-03-15  Andras Varga
 
 	* cinifile.cc/h: bugfix: complained about unterminated last line
