--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,5 @@
+2003-03-15  ------ omnetpp-2.3b2 released ------
+
 2003-03-15  Andras Varga
 
 	* cchannel.cc, cgate.cc: refined channel attributes handling, isBusy(),
