--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-19  Andras Varga
+
+	* opp_msgc: accept, but (since imports are not yet supported) ignore 
+	the -I flag
+
 2003-03-15  ------ omnetpp-2.3b2 released ------
 
 2003-02-15  ------ omnetpp-2.3b1 released ------
