--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-15  Andras Varga
+
+	* csimplemodule.cc: fixed bug introduced in 2.3b1 in deleteModule() 
+	which caused deleting another module (i.e. mod->deleteModule()) 
+	to crash.
+
 2003-03-15  ------ omnetpp-2.3b2 released ------
 
 2003-03-15  Andras Varga
