--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-17  Andras Varga
+
+	* objinsp.tcl: fixed bug which prevented cPackets (or objects 
+	subclassed from it) from being inspected (Tcl error)
+
 2003-03-15  ------ omnetpp-2.3b2 released ------
 
 2003-03-13  Andras Varga
