--- a/doc/src/manual/ch-introduction.tex
+++ b/doc/src/manual/ch-introduction.tex
@@ -233,10 +233,10 @@ The manual is organized around the following topics:
     architecture and the internals of {\opp}. This chapter will be
     useful to those who want to extend the capabilities of the
     simulator or want to embed it into a larger application.}
-  \item{The first two Appendices, \ref{cha:opnet-and-omnet} and
-    \ref{cha:parsec-and-omnet}, contain a comparison of {\opp} and
-    two other important and well-known simulation tools, OPNET and
-    PARSEC.}
+%  \item{The first two Appendices, \ref{cha:opnet-and-omnet} and
+%    \ref{cha:parsec-and-omnet}, contain a comparison of {\opp} and
+%    two other important and well-known simulation tools, OPNET and
+%    PARSEC.}
   \item{Appendice \ref{cha:ned-language-grammar} provides a reference
     of the NED language\index{ned!language}.}
 \end{itemize}
