--- a/doc/src/manual/usman.tex
+++ b/doc/src/manual/usman.tex
@@ -189,11 +189,11 @@
 
 \begin{appendix}
 
-  \include{ch-opnet}
-  \cleardoublepage
+%%  \include{ch-opnet}
+%%  \cleardoublepage
 
-  \include{ch-parsec}
-  \cleardoublepage
+%%  \include{ch-parsec}
+%%  \cleardoublepage
 
   \include{ch-ned-grammar}
   \cleardoublepage
