--- a/doc/src/manual/history.tex
+++ b/doc/src/manual/history.tex
@@ -5,9 +5,11 @@
 \hline
 \tabheadcol
 \tbf{Date} & \tbf{Author} & \tbf{Change}\\\hline
+2003/04 & AV & added section "Object ownership management"; removed section
+               "Using shared objects" \\\hline
 %%
 2003/01 & AV & Added chapter about message subclassing; revised chapter about
-running the simulation and incorporated new Cmdenv options; added new 
+running the simulation and incorporated new Cmdenv options; added new
 distributions and clarified many details in NED expr. handling section\\\hline
 %%
 Summer 2002 & Ulrich Kaage & Converted from Word to LaTeX\\\hline
